--- a/Practical18.html
+++ b/Practical18.html
@@ -30,3 +30,32 @@
     </table>
   </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <table border="4px">
+      <tr>
+        <th>Name</th>
+        <th>Location</th>
+        <th>Photo</th>
+      </tr>
+      <tr>
+        <td>Apu Gorai</td>
+        <td>India</td>
+        <td>
+          <img
+            height="100"
+            src="https://app.3schools.in/logo.png"
+            width="100"
+          />
+        </td>
+      </tr>
+    </table>
+  </body>
+</html>
