--- a/Practical22.html
+++ b/Practical22.html
@@ -62,5 +62,8 @@
         </p>
       </section>
     </main>
+    <footer class="footer">
+        <p>&copy; 2024 My Website.Tanishq Shivasharan.</p>
+      </footer>
   </body>
 </html>
