--- a/Practical18.html
+++ b/Practical18.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Practical 18</title>
   </head>
   <body>
     <table border="2" border color="green">
@@ -36,7 +36,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Practical 18</title>
   </head>
   <body>
     <table border="4px">
