--- a/WPD micro-project/index.html
+++ b/WPD micro-project/index.html
@@ -4,15 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Glamora</title>
   </head>
   <body>
     <center>
       <div class="sell">Offer - Buy 2 Get 1 SPF 50...Hurry up!!!</div>
     </center>
-    <center>
-      <h1>Glamora</h1>
-    </center>
+    <div class="hero">
+      <div class="logo">
+        <img 
+          src="https://ideogram.ai/api/images/direct/bD7eNzm9QJm0ROfdbuNsVg.png"
+          height="100px"
+          width="100px"
+          alt="Logo"
+        />
+      </div>
+      <div class="brand-name">
+        <center>
+          <h1>Glamora</h1>
+        </center>
+      </div>
+    </div>
+    <img src="https://plus.unsplash.com/premium_photo-1679046948726-72f7d53296c5?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="50%" width="50%" style="margin-right: 30px; margin-left: 30px">
     <center>
       <nav>
         <ul>
@@ -23,14 +37,13 @@
         </ul>
       </nav>
     </center>
-    <center>
-      <img
+      <img id="products"
         src="https://media.istockphoto.com/id/1446484941/photo/salicylic-acid-in-a-bottle-chemical-ingredient-in-beauty-product.jpg?s=2048x2048&w=is&k=20&c=t5aCthKpLIEZFR7Fz7FTgRzg41ZXir1lTmbR8XkNozk="
-        alt=""
+        alt="Salicylic Acid"
         height="300px"
-        width="500px"
+        width="400px"
       />
-    </center>
+      <img src="https://images.unsplash.com/photo-1586212653598-40f9046fe5e3?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Hylamide" height="300px" width="400px">
     <div id="info">
       <h2>Knowledge</h2>
       <br />
@@ -44,9 +57,11 @@
         lower concentrations to avoid irritation and sun sensitivity.
       </p>
       <br />
+      <p>2. Hylamide is a skincare brand offering advanced formulations targeting various skin concerns. Developed by DECIEM, it features innovative ingredients and technologies for improved skin health and appearance.</p>
     </div>
     <div class="ourvalues">Core Beliefs</div>
     <p>
+      <img src="" alt="" />
       Transparency No hidden ingredients, no opacity. Full disclosure of
       ingredients used & their concentration
     </p>
@@ -67,5 +82,17 @@
         "Truth never damages a cause that is just."~Mahatma Gandhi
       </p>
     </center>
+    <footer>
+      <div>
+        <ul class="social-media">
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-x-twitter"></i>
+        </ul>
+      </div>
+      <div>
+        <p>&copy; 2024 Glamora. All rigths reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
