--- a/WPD micro-project/index.html
+++ b/WPD micro-project/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" href=
+"https://ideogram.ai/api/images/direct/vchBFZX6S7GVggHZ-uSO9w.png"
+          type="image/x-icon">
     <title>Glamora</title>
   </head>
   <body>
@@ -14,7 +17,7 @@
     <div class="hero">
       <div class="logo">
         <img 
-          src="https://ideogram.ai/api/images/direct/bD7eNzm9QJm0ROfdbuNsVg.png"
+          src="https://ideogram.ai/api/images/direct/QK0UPX6kRaO4pyctUBcU8A.png"
           height="100px"
           width="100px"
           alt="Logo"
@@ -26,14 +29,17 @@
         </center>
       </div>
     </div>
-    <img src="https://plus.unsplash.com/premium_photo-1679046948726-72f7d53296c5?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="50%" width="50%" style="margin-right: 30px; margin-left: 30px">
+    <div>
+    <img src="https://ideogram.ai/api/images/direct/38EDdbmER6OY6W1uiZrM0A.png" height="50%" width="50%" style="margin-right: 30px; margin-left: 30px">
+    </div>
     <center>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a class="active" href="#">Home</a></li>
           <li><a href="#">Shop</a></li>
           <li><a href="#info">Knowledge</a></li>
           <li><a href="#">sign-in/login</a></li>
+          <i class="fa-solid fa-bag-shopping"></i>
         </ul>
       </nav>
     </center>
