--- a/WPD micro-project/index.html
+++ b/WPD micro-project/index.html
@@ -1,104 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" href=
-"https://ideogram.ai/api/images/direct/vchBFZX6S7GVggHZ-uSO9w.png"
-          type="image/x-icon">
-    <title>Glamora</title>
-  </head>
-  <body>
-    <center>
-      <div class="sell">Offer - Buy 2 Get 1 SPF 50...Hurry up!!!</div>
-    </center>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="icon" href="https://ideogram.ai/api/images/direct/vchBFZX6S7GVggHZ-uSO9w.png" type="image/x-icon">
+  <title>Glamora</title>
+</head>
+<body>
+  <header>
+    <div class="offer">Offer - Buy 2 Get 1 SPF 50...Hurry up!!!</div>
     <div class="hero">
       <div class="logo">
-        <img 
-          src="https://ideogram.ai/api/images/direct/QK0UPX6kRaO4pyctUBcU8A.png"
-          height="100px"
-          width="100px"
-          alt="Logo"
-        />
+        <img src="https://ideogram.ai/api/images/direct/QK0UPX6kRaO4pyctUBcU8A.png" alt="Logo">
       </div>
       <div class="brand-name">
-        <center>
-          <h1>Glamora</h1>
-        </center>
+        <h1>Glamora</h1>
       </div>
     </div>
-    <div>
-    <img src="https://ideogram.ai/api/images/direct/38EDdbmER6OY6W1uiZrM0A.png" height="50%" width="50%" style="margin-right: 30px; margin-left: 30px">
+  </header>
+  <nav>
+    <ul>
+      <li><a class="active" href="#">Home</a></li>
+      <li><a href="#">Shop</a></li>
+      <li><a href="#info">Knowledge</a></li>
+      <li><a href="#">Sign-in/Login</a><i class="fas fa-shopping-bag"></i></li>
+    </ul>
+  </nav>
+  <main>
+    <div class="products">
+    <div class="proSA">
+      <img src="https://ideogram.ai/api/images/direct/UV7kbDx5S7CxJlcb0Gpt5w.png" class="SA-img" alt="Salicylic Acid">
+      <div class="SA-body">
+        <h1 class="SAtitle">SA</h1>
+        <p class="SA-shortnote">Salicylic Acid effectively penetrates pores to unclog and exfoliate, reducing acne, blackheads, and blemishes, while promoting smoother, clearer skin.</p>
+        <button class="SA-btn">&#8377; <strike>299</strike> &#8377;  295 Buy now!</button>
+      </div>
     </div>
-    <center>
-      <nav>
+    <div class="proHYL">
+      <img src="https://ideogram.ai/api/images/direct/4SARBX6ARdC7ou0KTmJhLg.jpg" class="HYL-img" alt="Hylamide">
+      <div class="HYL-body">
+        <h1 class="HYLtitle">HYL</h1>
+        <p class="HYL-shortnote">Hylamide offers advanced skincare formulations with potent active ingredients targeting various skin concerns, from hydration to anti-aging, for visible and effective results.</p>
+        <button class="HYL-btn">&#8377; 599</button>
+      </div>
+    </div>
+    <div class="proVC-10">
+      <img src="https://ideogram.ai/api/images/direct/PERoZFw9QpGK1eAh5d1Qwg.png" class="VC-10-img" alt="Hylamide">
+      <div class="VC-10-body">
+        <h1 class="VC-10title">Vit C 10%</h1>
+        <p class="VC-10-shortnote">Vitamin C 10% is a potent antioxidant that brightens skin, boosts collagen production, fades dark spots, and protects against environmental stressors, promoting a radiant and youthful complexion.
+        </p>
+        <button class="VC-10-btn">&#8377; <strike>699</strike> &#8377; 695 Buy now!</button>
+      </div>
+    </div>
+    <div class="proOSK">
+      <img src="https://ideogram.ai/api/images/direct/C3mTDtwNSMKDYXmwdegDAA.png" class="OSK-img" alt="Hylamide">
+      <div class="OSK-body">
+        <h1 class="OSKtitle">HYL</h1>
+        <p class="OSK-shortnote">Hylamide offers advanced skincare formulations with potent active ingredients targeting various skin concerns, from hydration to anti-aging, for visible and effective results.</p>
+        <button class="OSK-btn">&#8377; <strike>1299</strike> &#8377; 1000 Buy now!</button>
+      </div>
+    </div>
+  </div>
+  <div id="info">
+    <h2>Knowledge</h2>
+    <br>
+    <br>
+    <ul>
+      <li>Salicylic acid is a common skincare ingredient known for its acne-fighting and exfoliating properties. It penetrates deep into pores, unclogs them, and dissolves excess oil, making it effective for treating acne, blackheads, and whiteheads. Salicylic acid also regulates oil production and has anti-inflammatory properties. While it's widely available in over-the-counter products, it's essential to start with lower concentrations to avoid irritation and sun sensitivity.</li>
+      <br>
+      <li>Hylamide is a skincare brand offering advanced formulations targeting various skin concerns. Developed by DECIEM, it features innovative ingredients and technologies for improved skin health and appearance.</li>
+      <br>
+      <li>Vitamin C 10% is a potent skincare ingredient revered for its antioxidant properties. It brightens skin, reduces hyperpigmentation, and boosts collagen, enhancing overall skin health and radiance.</li>
+      <br>
+      <li>This kit contains:
         <ul>
-          <li><a class="active" href="#">Home</a></li>
-          <li><a href="#">Shop</a></li>
-          <li><a href="#info">Knowledge</a></li>
-          <li><a href="#">sign-in/login</a></li>
-          <i class="fa-solid fa-bag-shopping"></i>
+          <li>A daily, gentle exfoliating, acne-fighting face cleanser. It combines BHA + LHA (Salicylic Acid + Capryloyl Salicylic Acid) in 2% concentration, providing deep cleansing, pore decongestion & sebum reduction without drying out the skin.</li>
+          <li>A nourishing, daily serum packed with pure Vitamin B3 (Niacinamide), powerful antioxidant marine extract, and Zinc. Together they reduce sebum, acne marks, erythema, and inflammation, and also protect the skin against UV-induced DNA damage.</li>
+          <li>An everyday moisturizer for hydrating, nourishing, and repairing the skin. A lightweight, oil-free product with a high concentration of Vitamin B5 (Panthenol), formulated especially for oily/combination skin.</li>
         </ul>
-      </nav>
-    </center>
-      <img id="products"
-        src="https://media.istockphoto.com/id/1446484941/photo/salicylic-acid-in-a-bottle-chemical-ingredient-in-beauty-product.jpg?s=2048x2048&w=is&k=20&c=t5aCthKpLIEZFR7Fz7FTgRzg41ZXir1lTmbR8XkNozk="
-        alt="Salicylic Acid"
-        height="300px"
-        width="400px"
-      />
-      <img src="https://images.unsplash.com/photo-1586212653598-40f9046fe5e3?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Hylamide" height="300px" width="400px">
-    <div id="info">
-      <h2>Knowledge</h2>
-      <br />
-      <p>
-        1. Salicylic acid is a common skincare ingredient known for its
-        acne-fighting and exfoliating properties. It penetrates deep into pores,
-        unclogs them, and dissolves excess oil, making it effective for treating
-        acne, blackheads, and whiteheads. Salicylic acid also regulates oil
-        production and has anti-inflammatory properties. While it's widely
-        available in over-the-counter products, it's essential to start with
-        lower concentrations to avoid irritation and sun sensitivity.
-      </p>
-      <br />
-      <p>2. Hylamide is a skincare brand offering advanced formulations targeting various skin concerns. Developed by DECIEM, it features innovative ingredients and technologies for improved skin health and appearance.</p>
-    </div>
-    <div class="ourvalues">Core Beliefs</div>
+      </li>
+    </ul>
+    <p>All our ingredients are sourced from leading global suppliers. Our Niacinamide comes from Lonza, Switzerland, and Salicylic Acid comes from Merck, Germany.</p>
+  </div>
+  
+    <div class="our-values">Core Beliefs</div>
     <p>
-      <img src="" alt="" />
-      Transparency No hidden ingredients, no opacity. Full disclosure of
-      ingredients used & their concentration
+      <img id="beliefs" src="https://cdn.shopify.com/s/files/1/0410/9608/5665/t/3/assets/transparencyicon-1646306332004.svg?v=1646306336" alt="">
+      Transparency: No hidden ingredients, no opacity. Full disclosure of ingredients used & their concentration.
     </p>
-    <center>
-      <h2>#Hide<b>Nothing</b></h2>
-      <br />
-      <p>
-        "There is no beauty without truth and there is no truth without
-        transparency"~Carry Somers
-        <br />
-        <br />
-        "Transparency is the new objectivity."~David Weinberger
-        <br />
-        <br />
-        "Speak the truth Transparency breeds legitimacy."~John C Maxwell
-        <br />
-        <br />
-        "Truth never damages a cause that is just."~Mahatma Gandhi
-      </p>
-    </center>
-    <footer>
-      <div>
-        <ul class="social-media">
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-facebook"></i>
-          <i class="fa-brands fa-x-twitter"></i>
-        </ul>
-      </div>
-      <div>
-        <p>&copy; 2024 Glamora. All rigths reserved.</p>
-      </div>
-    </footer>
-  </body>
+    <div class="quote">
+      <blockquote>
+        "There is no beauty without truth and there is no truth without transparency" - Carry Somers<br>
+        "Transparency is the new objectivity." - David Weinberger<br>
+        "Speak the truth Transparency breeds legitimacy." - John C Maxwell<br>
+        "Truth never damages a cause that is just." - Mahatma Gandhi
+      </blockquote>
+    </div>
+  </main>
+  <footer>
+    <ul class="social-media">
+      <li><i class="fab fa-instagram"></i></li>
+      <li><i class="fab fa-facebook"></i></li>
+      <li><i class="fab fa-twitter"></i></li>
+    </ul>
+    <p>&copy; 2024 Glamora. All rights reserved.</p>
+  </footer>
+</body>
 </html>
