--- a/WPD micro-project/index.html
+++ b/WPD micro-project/index.html
@@ -1,112 +1,294 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="icon" href="https://ideogram.ai/api/images/direct/vchBFZX6S7GVggHZ-uSO9w.png" type="image/x-icon">
-  <title>Glamora</title>
-</head>
-<body>
-  <header>
-    <div class="offer">Offer - Buy 2 Get 1 SPF 50...Hurry up!!!</div>
-    <div class="hero">
-      <div class="logo">
-        <img src="https://ideogram.ai/api/images/direct/QK0UPX6kRaO4pyctUBcU8A.png" alt="Logo">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="icon"
+      href="https://ideogram.ai/api/images/direct/vchBFZX6S7GVggHZ-uSO9w.png"
+      type="image/x-icon"
+    />
+    <title>Glamora</title>
+  </head>
+  <body>
+    <header>
+      <div class="offer">Offer - Buy 2 Get 1 SPF 50...Hurry up!!!</div>
+      <div class="hero">
+        <div class="logo">
+          <img
+            src="https://ideogram.ai/api/images/direct/QK0UPX6kRaO4pyctUBcU8A.png"
+            alt="Logo"
+          />
+        </div>
+        <div class="brand-name">
+          <h1>Glamora</h1>
+        </div>
       </div>
-      <div class="brand-name">
-        <h1>Glamora</h1>
+    </header>
+    <nav>
+      <ul>
+        <li><a class="active" href="#">Home</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#info">Knowledge</a></li>
+        <li>
+          <a href="#">Sign-in/Login</a><i class="fas fa-shopping-bag"></i>
+        </li>
+      </ul>
+    </nav>
+    <main>
+      <div class="products">
+        <div class="proSA">
+          <img
+            src="https://ideogram.ai/api/images/direct/UV7kbDx5S7CxJlcb0Gpt5w.png"
+            class="SA-img"
+            alt="Salicylic Acid"
+          />
+          <div class="SA-body">
+            <h1 class="SAtitle">SA</h1>
+            <p class="SA-shortnote">
+              Salicylic Acid effectively penetrates pores to unclog and
+              exfoliate, reducing acne, blackheads, and blemishes, while
+              promoting smoother, clearer skin.
+            </p>
+            <button class="SA-btn">
+              &#8377; <strike>299</strike> &#8377; 249 Buy now!
+            </button>
+          </div>
+        </div>
+        <div class="proHYL">
+          <img
+            src="https://ideogram.ai/api/images/direct/4SARBX6ARdC7ou0KTmJhLg.jpg"
+            class="HYL-img"
+            alt="Hylamide"
+          />
+          <div class="HYL-body">
+            <h1 class="HYLtitle">HYL</h1>
+            <p class="HYL-shortnote">
+              Hylamide offers advanced skincare formulations with potent active
+              ingredients targeting various skin concerns, from hydration to
+              anti-aging, for visible and effective results.
+            </p>
+            <button class="HYL-btn">&#8377; 599</button>
+          </div>
+        </div>
+        <div class="proVC-10">
+          <img
+            src="https://ideogram.ai/api/images/direct/PERoZFw9QpGK1eAh5d1Qwg.png"
+            class="VC-10-img"
+            alt="Hylamide"
+          />
+          <div class="VC-10-body">
+            <h1 class="VC-10title">Vit C 10%</h1>
+            <p class="VC-10-shortnote">
+              Vitamin C 10% is a potent antioxidant that brightens skin, boosts
+              collagen production, fades dark spots, and protects against
+              environmental stressors, promoting a radiant and youthful
+              complexion.
+            </p>
+            <button class="VC-10-btn">
+              &#8377; <strike>699</strike> &#8377; 695 Buy now!
+            </button>
+          </div>
+        </div>
+        <div class="proOSK">
+          <img
+            src="https://ideogram.ai/api/images/direct/C3mTDtwNSMKDYXmwdegDAA.png"
+            class="OSK-img"
+            alt="Hylamide"
+          />
+          <div class="OSK-body">
+            <h1 class="OSKtitle">OSK</h1>
+            <p class="OSK-shortnote">
+              Combat acne effectively with potent ingredients sourced from top
+              global suppliers, providing gentle yet powerful skincare for
+              clearer, healthier skin.
+            </p>
+            <button class="OSK-btn">
+              &#8377; <strike>1299</strike> &#8377; 1000 Buy now!
+            </button>
+          </div>
+        </div>
+        <div class="proAAK">
+          <img
+            src="https://ideogram.ai/api/images/direct/qlExGURIRcmYPkibpBUc6w.png"
+            class="AAK-img"
+            alt="Hylamide"
+          />
+          <div class="AAK-body">
+            <h1 class="AAKtitle">AAK</h1>
+            <p class="AAK-shortnote">
+              This Anti-Acne Kit offers a comprehensive solution, combining
+              gentle yet effective ingredients like Salicylic Acid, Niacinamide,
+              and Vitamin B5 to combat acne, reduce inflammation, and nourish
+              the skin.
+            </p>
+            <button class="AAK-btn">
+              &#8377; <strike>1299</strike> &#8377; 1000 Buy now!
+            </button>
+          </div>
+        </div>
+        <div class="proDSK">
+          <img
+            src="https://ideogram.ai/api/images/direct/9t7Loc6hScCMCsvF3rNm-g.png"
+            class="DSK-img"
+            alt="Hylamide"
+          />
+          <div class="DSK-body">
+            <h1 class="DSKtitle">DSK</h1>
+            <p class="DSK-shortnote">
+              Revitalize dry skin with our Dry Skincare Kit. Hydrate, soften,
+              and nourish with proven ingredients sourced from leading global
+              suppliers for radiant, healthy-looking skin.
+            </p>
+            <button class="DSK-btn">
+              &#8377; <strike>1299</strike> &#8377; 1000 Buy now!
+            </button>
+          </div>
+        </div>
       </div>
-    </div>
-  </header>
-  <nav>
-    <ul>
-      <li><a class="active" href="#">Home</a></li>
-      <li><a href="#">Shop</a></li>
-      <li><a href="#info">Knowledge</a></li>
-      <li><a href="#">Sign-in/Login</a><i class="fas fa-shopping-bag"></i></li>
-    </ul>
-  </nav>
-  <main>
-    <div class="products">
-    <div class="proSA">
-      <img src="https://ideogram.ai/api/images/direct/UV7kbDx5S7CxJlcb0Gpt5w.png" class="SA-img" alt="Salicylic Acid">
-      <div class="SA-body">
-        <h1 class="SAtitle">SA</h1>
-        <p class="SA-shortnote">Salicylic Acid effectively penetrates pores to unclog and exfoliate, reducing acne, blackheads, and blemishes, while promoting smoother, clearer skin.</p>
-        <button class="SA-btn">&#8377; <strike>299</strike> &#8377;  295 Buy now!</button>
-      </div>
-    </div>
-    <div class="proHYL">
-      <img src="https://ideogram.ai/api/images/direct/4SARBX6ARdC7ou0KTmJhLg.jpg" class="HYL-img" alt="Hylamide">
-      <div class="HYL-body">
-        <h1 class="HYLtitle">HYL</h1>
-        <p class="HYL-shortnote">Hylamide offers advanced skincare formulations with potent active ingredients targeting various skin concerns, from hydration to anti-aging, for visible and effective results.</p>
-        <button class="HYL-btn">&#8377; 599</button>
-      </div>
-    </div>
-    <div class="proVC-10">
-      <img src="https://ideogram.ai/api/images/direct/PERoZFw9QpGK1eAh5d1Qwg.png" class="VC-10-img" alt="Hylamide">
-      <div class="VC-10-body">
-        <h1 class="VC-10title">Vit C 10%</h1>
-        <p class="VC-10-shortnote">Vitamin C 10% is a potent antioxidant that brightens skin, boosts collagen production, fades dark spots, and protects against environmental stressors, promoting a radiant and youthful complexion.
-        </p>
-        <button class="VC-10-btn">&#8377; <strike>699</strike> &#8377; 695 Buy now!</button>
-      </div>
-    </div>
-    <div class="proOSK">
-      <img src="https://ideogram.ai/api/images/direct/C3mTDtwNSMKDYXmwdegDAA.png" class="OSK-img" alt="Hylamide">
-      <div class="OSK-body">
-        <h1 class="OSKtitle">HYL</h1>
-        <p class="OSK-shortnote">Hylamide offers advanced skincare formulations with potent active ingredients targeting various skin concerns, from hydration to anti-aging, for visible and effective results.</p>
-        <button class="OSK-btn">&#8377; <strike>1299</strike> &#8377; 1000 Buy now!</button>
-      </div>
-    </div>
-  </div>
-  <div id="info">
-    <h2>Knowledge</h2>
-    <br>
-    <br>
-    <ul>
-      <li>Salicylic acid is a common skincare ingredient known for its acne-fighting and exfoliating properties. It penetrates deep into pores, unclogs them, and dissolves excess oil, making it effective for treating acne, blackheads, and whiteheads. Salicylic acid also regulates oil production and has anti-inflammatory properties. While it's widely available in over-the-counter products, it's essential to start with lower concentrations to avoid irritation and sun sensitivity.</li>
-      <br>
-      <li>Hylamide is a skincare brand offering advanced formulations targeting various skin concerns. Developed by DECIEM, it features innovative ingredients and technologies for improved skin health and appearance.</li>
-      <br>
-      <li>Vitamin C 10% is a potent skincare ingredient revered for its antioxidant properties. It brightens skin, reduces hyperpigmentation, and boosts collagen, enhancing overall skin health and radiance.</li>
-      <br>
-      <li>This kit contains:
+      <div id="info">
+        <h2>Knowledge</h2>
+        <br />
+        <br />
         <ul>
-          <li>A daily, gentle exfoliating, acne-fighting face cleanser. It combines BHA + LHA (Salicylic Acid + Capryloyl Salicylic Acid) in 2% concentration, providing deep cleansing, pore decongestion & sebum reduction without drying out the skin.</li>
-          <li>A nourishing, daily serum packed with pure Vitamin B3 (Niacinamide), powerful antioxidant marine extract, and Zinc. Together they reduce sebum, acne marks, erythema, and inflammation, and also protect the skin against UV-induced DNA damage.</li>
-          <li>An everyday moisturizer for hydrating, nourishing, and repairing the skin. A lightweight, oil-free product with a high concentration of Vitamin B5 (Panthenol), formulated especially for oily/combination skin.</li>
+          <li>
+            Salicylic acid is a common skincare ingredient known for its
+            acne-fighting and exfoliating properties. It penetrates deep into
+            pores, unclogs them, and dissolves excess oil, making it effective
+            for treating acne, blackheads, and whiteheads. Salicylic acid also
+            regulates oil production and has anti-inflammatory properties. While
+            it's widely available in over-the-counter products, it's essential
+            to start with lower concentrations to avoid irritation and sun
+            sensitivity.
+          </li>
+          <br />
+          <li>
+            Hylamide is a skincare brand offering advanced formulations
+            targeting various skin concerns. Developed by DECIEM, it features
+            innovative ingredients and technologies for improved skin health and
+            appearance.
+          </li>
+          <br />
+          <li>
+            Vitamin C 10% is a potent skincare ingredient revered for its
+            antioxidant properties. It brightens skin, reduces
+            hyperpigmentation, and boosts collagen, enhancing overall skin
+            health and radiance.
+          </li>
+          <br />
+          <li>
+            This kit contains:
+            <ul>
+              <li>
+                A daily, gentle exfoliating, acne-fighting face cleanser. It
+                combines BHA + LHA (Salicylic Acid + Capryloyl Salicylic Acid)
+                in 2% concentration, providing deep cleansing, pore decongestion
+                & sebum reduction without drying out the skin.
+              </li>
+              <li>
+                A nourishing, daily serum packed with pure Vitamin B3
+                (Niacinamide), powerful antioxidant marine extract, and Zinc.
+                Together they reduce sebum, acne marks, erythema, and
+                inflammation, and also protect the skin against UV-induced DNA
+                damage.
+              </li>
+              <li>
+                An everyday moisturizer for hydrating, nourishing, and repairing
+                the skin. A lightweight, oil-free product with a high
+                concentration of Vitamin B5 (Panthenol), formulated especially
+                for oily/combination skin.
+              </li>
+            </ul>
+          </li>
         </ul>
-      </li>
-    </ul>
-    <p>All our ingredients are sourced from leading global suppliers. Our Niacinamide comes from Lonza, Switzerland, and Salicylic Acid comes from Merck, Germany.</p>
-  </div>
-  
-    <div class="our-values">Core Beliefs</div>
-    <p>
-      <img id="beliefs" src="https://cdn.shopify.com/s/files/1/0410/9608/5665/t/3/assets/transparencyicon-1646306332004.svg?v=1646306336" alt="">
-      Transparency: No hidden ingredients, no opacity. Full disclosure of ingredients used & their concentration.
-    </p>
-    <div class="quote">
-      <blockquote>
-        "There is no beauty without truth and there is no truth without transparency" - Carry Somers<br>
-        "Transparency is the new objectivity." - David Weinberger<br>
-        "Speak the truth Transparency breeds legitimacy." - John C Maxwell<br>
-        "Truth never damages a cause that is just." - Mahatma Gandhi
-      </blockquote>
+        <p>
+          All our ingredients are sourced from leading global suppliers. Our
+          Niacinamide comes from Lonza, Switzerland, and Salicylic Acid comes
+          from Merck, Germany.
+        </p>
+      </div>
+
+      <h1>Core Beliefs</h1>
+      <p class="Beliefs">
+        <img
+          src="https://cdn.shopify.com/s/files/1/0410/9608/5665/t/3/assets/transparencyicon-1646306332004.svg?v=1646306336"
+          alt=""
+          style="color: azure"
+        /><br />
+        Transparency: No hidden ingredients, no opacity. Full disclosure<br />
+        of ingredients used & their concentration.
+      </p>
+      <p class="Beliefs">
+        <img src="https://cdn.shopify.com/s/files/1/0410/9608/5665/t/3/assets/efficacyicon2-1646306653612.svg?v=1646306654" alt="" style="color: azure" /><br />
+        Each product is launched on back of proven science only
+      </p>
+      <br />
+      <br />
     </div>
-  </main>
-  <footer>
-    <ul class="social-media">
-      <li><i class="fab fa-instagram"></i></li>
-      <li><i class="fab fa-facebook"></i></li>
-      <li><i class="fab fa-twitter"></i></li>
-    </ul>
-    <p>&copy; 2024 Glamora. All rights reserved.</p>
-  </footer>
-</body>
+      <div class="quote">
+        <blockquote>
+          "There is no beauty without truth and there is no truth without
+          transparency" - Carry Somers<br />
+          "Transparency is the new objectivity." - David Weinberger<br />
+          "Speak the truth Transparency breeds legitimacy." - John C Maxwell<br />
+          "Truth never damages a cause that is just." - Mahatma Gandhi
+        </blockquote>
+      </div>
+    </main>
+    <footer>
+      <ul class="social-media">
+        <h1 class="social-media-heading">Social-media</h1>
+        <li>
+          <a
+            href="https://www.instagram.com/tanishqshivasharan747/"
+            target="_blank"
+            ><i class="fab fa-instagram"></i
+          ></a>
+        </li>
+        <li><i class="fab fa-facebook"></i></li>
+        <li><i class="fab fa-twitter"></i></li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/tanishq-shivasharan-1120a0233/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+        </li>
+      </ul>
+      <ul class="Contact">
+        <h1 class="Contact-heading">Chat with us</h1>
+        <li>
+          <a href="https://web.whatsapp.com/" target="_blank"
+            ><i class="fa-brands fa-whatsapp"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://web.telegram.org/k/"
+            ><i class="fa-brands fa-telegram"></i
+          ></a>
+        </li>
+      </ul>
+      <ul class="dev">
+        <h1 class="dev-heading">Coding enthusiast</h1>
+        <li>
+          <a href="https://github.com/Tanishq747Shivasharan" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </li>
+        <li><a href=""></a></li>
+      </ul>
+      <center>
+        <p>&copy; 2024 &#9829; Glamora,inc. All rights reserved.</p>
+        <h1>#WPD Micro-Project</h1>
+      </center>
+    </footer>
+  </body>
 </html>
