--- a/WPD micro-project/index.html
+++ b/WPD micro-project/index.html
@@ -219,16 +219,23 @@
       <h1>Core Beliefs</h1>
       <p class="Beliefs">
         <img
-          src="https://cdn.shopify.com/s/files/1/0410/9608/5665/t/3/assets/transparencyicon-1646306332004.svg?v=1646306336"
+          src="https://ideogram.ai/api/images/direct/foR4-AUsRPClWQbYRu1FLw.png"
           alt=""
           style="color: azure"
         /><br />
+        <h3>Transparency</h3>
         Transparency: No hidden ingredients, no opacity. Full disclosure<br />
         of ingredients used & their concentration.
       </p>
       <p class="Beliefs">
-        <img src="https://cdn.shopify.com/s/files/1/0410/9608/5665/t/3/assets/efficacyicon2-1646306653612.svg?v=1646306654" alt="" style="color: azure" /><br />
+        <img src="https://ideogram.ai/api/images/direct/kdgMIqn3SWy_ygTEvIYkkg.png" alt="" style="color: azure" /><br />
+        <h3>Efficacy</h3>
         Each product is launched on back of proven science only
+      </p>
+      <p class="Beliefs">
+        <img src="https://ideogram.ai/api/images/direct/iYNZvMglTnKARDs7Jobo6A.png" alt="" style="color: azure" /><br />
+        <h3>Affordable</h3>
+        Skincare, accessible to all
       </p>
       <br />
       <br />
