--- a/WPD micro-project/index.html
+++ b/WPD micro-project/index.html
@@ -215,7 +215,7 @@
           from Merck, Germany.
         </p>
       </div>
-
+      
       <h1>Core Beliefs</h1>
       <p class="Beliefs">
         <img
@@ -251,6 +251,7 @@
       </div>
     </main>
     <footer>
+      <div class="footer-container">
       <ul class="social-media">
         <h1 class="social-media-heading">Social-media</h1>
         <li>
@@ -292,6 +293,19 @@
         </li>
         <li><a href=""></a></li>
       </ul>
+      <ul class="about">
+        <h1 class="ab-heading">About</h1>
+        <li>
+          <a href="./index1.html" target="_blank"
+            >Privacy Policy</a>
+        </li>
+        <li>
+          <a href="https://web.telegram.org/k/"
+            ><i class="fa-brands fa-telegram"></i
+          ></a>
+        </li>
+      </ul>
+      </div>
       <center>
         <p>&copy; 2024 &#9829; Glamora,inc. All rights reserved.</p>
         <h1>#WPD Micro-Project</h1>
