--- a/WPD micro-project/index1.html
+++ b/WPD micro-project/index1.html
@@ -1,35 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style1.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style1.css" />
+    <link
+      rel="icon"
+      href="https://ideogram.ai/api/images/direct/vchBFZX6S7GVggHZ-uSO9w.png"
+      type="image/x-icon"
+    />
     <title>Privacy Policy - Glamora</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="offer">Offer - Buy 2 Get 1 SPF 50...Hurry up!!!</div>
-        <div class="hero">
-          <div class="logo">
-            <img
-              src="https://ideogram.ai/api/images/direct/QK0UPX6kRaO4pyctUBcU8A.png"
-              alt="Logo" width="0px" height="60px"
-            />
-          </div>
-          <div class="brand-name">
-            <h1>Glamora</h1>
-          </div>
+      <div class="offer">Offer - Buy 2 Get 1 SPF 50...Hurry up!!!</div>
+      <div class="hero">
+        <div class="logo">
+          <img
+            src="https://ideogram.ai/api/images/direct/QK0UPX6kRaO4pyctUBcU8A.png"
+            alt="Logo"
+            width="0px"
+            height="60px"
+          />
         </div>
-      </header>
+        <div class="brand-name">
+          <h1>Glamora</h1>
+        </div>
+      </div>
+    </header>
     <div class="Privacy-Policy">
-    <h1 style="text-align: center; margin-bottom: 50px;">Privacy Policy</h1>
-    <p>The privacy policy outlines how "Glamora" uses and protects any information provided by users on its website.
-      <br>
-      <br>
-       "Glamora" is committed to ensuring that your privacy is protected. Should we request for certain information to identify you on your next visit, you can be assured that it will only be used in accordance with this privacy statement.
-       <br>
-       <br>
-        Note: Our privacy policy is subject to change at any time without notice. To make sure you are aware of any changes, please review this policy periodically. </p>
+      <h1 style="text-align: center; margin-bottom: 50px">Privacy Policy</h1>
+      <p class="Note">
+        The privacy policy outlines how "Glamora" uses and protects any
+        information provided by users on its website.
+        <br />
+        <br />
+        "Glamora" is committed to ensuring that your privacy is protected.
+        Should we request for certain information to identify you on your next
+        visit, you can be assured that it will only be used in accordance with
+        this privacy statement.
+        <br />
+        <br />
+        Note: Our privacy policy is subject to change at any time without
+        notice. To make sure you are aware of any changes, please review this
+        policy periodically.
+      </p>
     </div>
-</body>
+    <div class="cpii">
+      <h1 style="text-align: center; margin-bottom: 50px">
+        Collection of Personally Identifiable<br />
+        Information and other Information
+      </h1>
+      <p class="note1">We collect information as furnished to us and/or collected that is necessary and relevant for providing our core services and products. This information may include your name, address, date of birth, gender. This information may be stored on our computer records system and/or in printed records (collectively, information). Wherever practicable we will only collect information from you personally. We collect information in various ways, such as over the phone or in writing, in person, or over the Internet. We will notify you or will endeavor to make you aware that information is or has being collected. We will endeavor to inform you of the purpose of collection and will provide you with access to our privacy policy that contains details about access, correction and complaints. We advise that if you notify us that you do not wish to provide the information to us we may not be able to provide you with the product or service you have asked for or give you the level of service you expect.
+        <br>
+        <br>
+        <br>
+        We may collect the following information:
+        <ul>
+            <li>Name of job title</li>
+            <br>
+            <li>Contact information including email address</li>
+            <br>
+            <li>Demographic information such as postcode, preferences and interests</li>
+            <br>
+            <li>Other information relevant to customer surveys and/or offers</li>
+        </ul>
+      </p>
+    </div>
+    <div class="consent">
+      <h1 style="text-align: center; margin-bottom: 50px">Your consent</h1>
+      <p>By using the Website and/ or by providing your information, you consent to the collection and use of the information you disclose on the Website in accordance with this Privacy Policy, including but not limited to Your consent for sharing your information as per this privacy policy.
+      <br>
+      <br>
+      <br>
+        If we decide to change our privacy policy, we will post those changes on this page so that you are always aware of what information we collect, how we use it, and under what circumstances we disclose it.</p>
+  </body>
 </html>
