--- a/WPD micro-project/index.html
+++ b/WPD micro-project/index.html
@@ -240,6 +240,7 @@
       <br />
       <br />
     </div>
+    <center>
       <div class="quote">
         <blockquote>
           "There is no beauty without truth and there is no truth without
@@ -249,6 +250,7 @@
           "Truth never damages a cause that is just." - Mahatma Gandhi
         </blockquote>
       </div>
+    </center>
     </main>
     <footer>
       <div class="footer-container">
@@ -290,6 +292,7 @@
           <a href="https://github.com/Tanishq747Shivasharan" target="_blank"
             ><i class="fa-brands fa-github"></i
           ></a>
+          <a href="https://www.gitkraken.com/"><i class="fa-brands fa-gitkraken"></i></a>
         </li>
         <li><a href=""></a></li>
       </ul>
@@ -298,11 +301,6 @@
         <li>
           <a href="./index1.html" target="_blank"
             >Privacy Policy</a>
-        </li>
-        <li>
-          <a href="https://web.telegram.org/k/"
-            ><i class="fa-brands fa-telegram"></i
-          ></a>
         </li>
       </ul>
       </div>
