--- a/WPD micro-project/index1.html
+++ b/WPD micro-project/index1.html
@@ -67,12 +67,41 @@
         </ul>
       </p>
     </div>
+    <p>
     <div class="consent">
       <h1 style="text-align: center; margin-bottom: 50px">Your consent</h1>
       <p>By using the Website and/ or by providing your information, you consent to the collection and use of the information you disclose on the Website in accordance with this Privacy Policy, including but not limited to Your consent for sharing your information as per this privacy policy.
       <br>
       <br>
       <br>
-        If we decide to change our privacy policy, we will post those changes on this page so that you are always aware of what information we collect, how we use it, and under what circumstances we disclose it.</p>
+        If we decide to change our privacy policy, we will post those changes on this page so that you are always aware of what information we collect, how we use it, and under what circumstances we disclose it.
+        <br>
+        <br>
+        <h4>Grievance Officer</h4>
+        <br>
+        <br>
+        In accordance with Information Technology Act 2000 and rules made there under, the name and contact details of the Grievance Officer are provided below:
+        <br>
+        <br>
+        Lorem ipsum Pvt Ltd<br>
+        S1,16,Lorem ipsum, dolor sit amet consectetur adipisicing elit Area<br>
+        3002002, Solapur(Maharashtra)<br>
+        <b>Phone:</b> +91 97774 74725<br>
+        <b>Email:</b> help@beglamorer.co<br>
+        <b>Time:</b> Mon to Sat (10:00 to 5:00)
+        <br>
+        <br>
+        If you believe that any information about you is incorrect or incomplete, please email us as soon as possible. We ensure a prompt action to correct the same.
+      </p>
+      
+      <footer>
+        <div class="foot-contain">
+          <div>
+            <ul>
+              <a href="./index.html"><h4>Home</h4></a>
+            </ul>
+          </div>
+        </div>
+      </footer>
   </body>
 </html>
